2009-09-22  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	* lib/pytis/form/commands_.py:
	* tools/genmenu.py:
	Support on-line reloading of menus and access rights from the database.

2009-09-17  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Prevent logging errors about a missing DMP table in non-DMP applications.

2009-09-16  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Store and restore form folding state.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Fix column limiting of user rights by system rights.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Read user access rights directly from a_pytis_computed_summary_rights db table.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Display column names in the rights editing side form.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix displaying extended menu in the role editing multiform.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix checking for system rights presence in the summary rights computation.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix invalid _update_rights call in e_pytis_role_members_trigger.

2009-09-11  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fixes in the next menu position computation in e_pytis_menu_trigger.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Additional reports in `genmenu --check-update'.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	Genmenu documented.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Minor improvements of genmenu messages.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Add `Note:' prefix to genmenu notification messages.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb: