@@ -1,5 +1,11 @@
 2009-09-22  Milan Zamazal  <pdm@brailcom.org>
 
+	* lib/pytis/extensions/__init__.py:
+	* lib/pytis/extensions/types.py:
+	_TreeOrder type added.
+
+2009-09-22  Milan Zamazal  <pdm@brailcom.org>
+
 	* lib/pytis/form/application.py:
 	* lib/pytis/form/commands_.py:
 	* tools/genmenu.py:
